# oncrpc-win32

./: .gitignore  CMakeLists.txt  README
include/rpc/: stdint-compat.h  svc.h  types.h
librpc/: Bindresv.c  CMakeLists.txt  Getrpcen.c  Svc_simp.c  Svc_udp.c  xdr_mem.c  xdr_stdi.c
mountd/: CMakeLists.txt  mount.h  mount_funcs.c  mount_svc.c  mount_xdr.c
nfsd/: CMakeLists.txt  nfs.h  nfs_funcs.c  nfs_svc.c  nfs_xdr.c
rpcgen/: CMakeLists.txt
rpcinfo/: CMakeLists.txt  getopt.c  rpcinfo.c
